--- a/style.css
+++ b/style.css
@@ -1,16 +1,43 @@
 body {
-  width: 400px;
+  width: 325px;
   height: 400px;
   padding: 20px;
   font-size: large;
   background-image: url("background.avif");
   border-radius: 25px;
+  margin-block-end: 0em;
 }
 
-h1 {
+p {
+  display: block;
+  font-size: 2em;
+  margin-block-start: 0.0em;
+  margin-block-end: 0.15em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+}
+
+.tab-container {
+  border-radius: 10px;
+  box-shadow: 3px 4px 5px 0px rgba(0, 0, 0, 0.38);
+  padding: 10px;
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-between;
+  background-image: url("background-tab.avif");
+}
+
+.tab-container:active {
+  transform: translateY(4px);
+}
+
+.tab-container:hover {
+  transform: translateY(-2px);
+}
+
+.tab-counter {
+  font-size: medium;
+  padding-bottom: 10px;
   text-align: center;
-}
-
-#sample {
-  
 }
